[gd_scene load_steps=8 format=3 uid="uid://t8ilwbovn2qa"]

[ext_resource type="Script" path="res://scripts/opening_cutscene.gd" id="1_1"]
[ext_resource type="Texture2D" path="res://icon.svg" id="2_1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(50, 50)

[sub_resource type="GpuParticles2DMaterial" id="GpuParticles2DMaterial_1"]
direction = Vector3(0, -1, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
color = Color(1, 0.4, 0.8, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
direction = Vector3(0, -1, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
color = Color(1, 0.4, 0.8, 1)

[sub_resource type="Animation" id="Animation_1"]
resource_name = "cutscene_sequence"
length = 11.5

[node name="OpeningCutscene" type="Node2D"]
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.4, 0.2, 1)

[node name="Ground" type="ColorRect" parent="Background"]
offset_left = 0.0
offset_top = 600.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.3, 0.5, 0.3, 1)

[node name="Cat" type="Node2D" parent="."]
position = Vector2(1400, 500)

[node name="Sprite2D" type="Sprite2D" parent="Cat"]
modulate = Color(1, 0.2, 0.2, 1)
texture = ExtResource("2_1")
scale = Vector2(1.5, 1.5)

[node name="Tree" type="Node2D" parent="."]
position = Vector2(640, 500)

[node name="Sprite2D" type="Sprite2D" parent="Tree"]
modulate = Color(0.2, 0.6, 0.2, 1)
texture = ExtResource("2_1")
scale = Vector2(0.8, 2.0)

[node name="Particles2D" type="GPUParticles2D" parent="Tree"]
position = Vector2(0, -100)
emitting = false
amount = 50
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_1")
texture = ExtResource("2_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="TextOverlay" type="Label" parent="."]
offset_left = 140.0
offset_top = 200.0
offset_right = 1140.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 48
text = "Find the Lorax to save the forest!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
autoplay = false
